--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=CadastroDeUsuarios
+String url = "jdbc:h2:~/test";
+String user = "sa";
+String password = "";
+
+Connection conn = DriverManager.getConnection(url, user, password);
